unpackaged/main/default/objects/Account_Plant__c/Account_Plant__c.object-meta.xml
<CustomObject>
    <description>Junction object between Account and Plant</description>
    <label>Account Plant</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Account Plant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Plant</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>