unpackaged/main/default/objects/Account_Plant__c/fields/AB_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>AB_Approval_Status__c</fullName>
    <label>AB-Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>