unpackaged/main/default/objects/Account_Plant__c/fields/AC_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>AC_Capacity_kW__c</fullName>
    <formula>Plant__r.Megawatt_AC__c  * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AC Capacity kW</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>