unpackaged/main/default/objects/Account_Plant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plant</relationshipLabel>
    <relationshipName>Account_Plant</relationshipName>
    <type>Lookup</type>
</CustomField>