unpackaged/main/default/objects/Account_Plant__c/fields/Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Formula__c</fullName>
    <formula>Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Formula</label>
    <type>Text</type>
</CustomField>