unpackaged/main/default/objects/Account_Plant__c/fields/Active_RFI__c.field-meta.xml
<CustomField>
    <fullName>Active_RFI__c</fullName>
    <label>Active RFI</label>
    <summaryFilterItems>
        <field>RAID__c.RFI_Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>RAID__c.Account_Plant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>