unpackaged/main/default/objects/Account_Plant__c/fields/Asset_Builder_Status__c.field-meta.xml
<CustomField>
    <fullName>Asset_Builder_Status__c</fullName>
    <label>Asset Builder Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>