unpackaged/main/default/objects/Account_Plant__c/fields/Asset_Name__c.field-meta.xml
<CustomField>
    <fullName>Asset_Name__c</fullName>
    <formula>Drive_Id__c &amp; &quot;,&quot; &amp;  Customer_Plant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset Name</label>
    <type>Text</type>
</CustomField>