unpackaged/main/default/objects/Account_Plant__c/fields/BluePoint_Id__c.field-meta.xml
<CustomField>
    <fullName>BluePoint_Id__c</fullName>
    <label>BluePoint Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>