unpackaged/main/default/objects/Account_Plant__c/fields/Commercial_Operating_Date__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Operating_Date__c</fullName>
    <formula>Plant__r.Commercial_Operating_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commercial Operating Date</label>
    <type>Date</type>
</CustomField>