unpackaged/main/default/objects/Account_Plant__c/fields/Customer_Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Plant_Name__c</fullName>
    <label>Customer Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>