unpackaged/main/default/objects/Account_Plant__c/fields/Customer_provided_MW_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Customer_provided_MW_Capacity__c</fullName>
    <label>Customer-provided MW Capacity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>