unpackaged/main/default/objects/Account_Plant__c/fields/Data_Connection_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Connection_Notes__c</fullName>
    <label>Data Connection Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>