unpackaged/main/default/objects/Account_Plant__c/fields/DC_Capacity_kW__c.field-meta.xml
<CustomField>
    <fullName>DC_Capacity_kW__c</fullName>
    <formula>Plant__r.Megawatt_DC__c  * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DC Capacity kW</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>