unpackaged/main/default/objects/Account_Plant__c/fields/Drive_Id__c.field-meta.xml
<CustomField>
    <fullName>Drive_Id__c</fullName>
    <label>Drive Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>