unpackaged/main/default/objects/Account_Plant__c/fields/Ekhosoft_Id__c.field-meta.xml
<CustomField>
    <fullName>Ekhosoft_Id__c</fullName>
    <label>Ekhosoft Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>