unpackaged/main/default/objects/Account_Plant__c/fields/Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>Entity_Type__c</fullName>
    <formula>TEXT(Account__r.Subtype__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity Type</label>
    <type>Text</type>
</CustomField>