unpackaged/main/default/objects/Account_Plant__c/fields/GB_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>GB_Legacy_ID__c</fullName>
    <label>GB Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>