unpackaged/main/default/objects/Account_Plant__c/fields/Greenbyte_Id__c.field-meta.xml
<CustomField>
    <fullName>Greenbyte_Id__c</fullName>
    <label>Greenbyte Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>