unpackaged/main/default/objects/Account_Plant__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <formula>TEXT(Plant__r.Operator__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Operator</label>
    <type>Text</type>
</CustomField>