unpackaged/main/default/objects/Account_Plant__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Plants (Partner Account)</relationshipLabel>
    <relationshipName>Account_Plants1</relationshipName>
    <type>Lookup</type>
</CustomField>