unpackaged/main/default/objects/Account_Plant__c/fields/Partner_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account_Name__c</fullName>
    <label>Partner Account Name</label>
    <type>TextArea</type>
</CustomField>