unpackaged/main/default/objects/Account_Plant__c/fields/PF_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Legacy_ID__c</fullName>
    <label>PF Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>