unpackaged/main/default/objects/Account_Plant__c/fields/PF_Service_Product__c.field-meta.xml
<CustomField>
    <fullName>PF_Service_Product__c</fullName>
    <label>PF Service Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drive</fullName>
                <default>true</default>
                <label>Drive</label>
            </value>
            <value>
                <fullName>Drive Pro</fullName>
            </value>
            <value>
                <fullName>FSM</fullName>
            </value>
            <value>
                <fullName>Asset Build</fullName>
            </value>
            <value>
                <fullName>API</fullName>
                <isActive>false</isActive>
                <label>API</label>
            </value>
            <value>
                <fullName>Advanced Analytics</fullName>
                <isActive>false</isActive>
                <label>Advanced Analytics</label>
            </value>
            <value>
                <fullName>Bluepoint</fullName>
                <isActive>false</isActive>
                <label>Bluepoint</label>
            </value>
            <value>
                <fullName>Data Pipe</fullName>
                <isActive>false</isActive>
                <label>Data Pipe</label>
            </value>
            <value>
                <fullName>Edge Services</fullName>
                <isActive>false</isActive>
                <label>Edge Services</label>
            </value>
            <value>
                <fullName>Greenbyte</fullName>
                <isActive>false</isActive>
                <label>Greenbyte</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>