unpackaged/main/default/objects/Account_Plant__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Account Plant</relationshipLabel>
    <relationshipName>Account_Plant</relationshipName>
    <type>Lookup</type>
</CustomField>