unpackaged/main/default/objects/Account_Plant__c/fields/Plant_Country__c.field-meta.xml
<CustomField>
    <fullName>Plant_Country__c</fullName>
    <formula>TEXT( Plant__r.Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country</label>
    <type>Text</type>
</CustomField>