unpackaged/main/default/objects/Account_Plant__c/fields/Plant_Megawatt_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Plant_Megawatt_Capacity__c</fullName>
    <formula>Plant__r.MWp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Megawatt Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>