unpackaged/main/default/objects/Account_Plant__c/fields/Plant_MWH__c.field-meta.xml
<CustomField>
    <fullName>Plant_MWH__c</fullName>
    <formula>Plant__r.MW_Energy_Capacity_MWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant MWH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>