unpackaged/main/default/objects/Account_Plant__c/fields/Plant_MWP__c.field-meta.xml
<CustomField>
    <fullName>Plant_MWP__c</fullName>
    <formula>Plant__r.MWp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant MWP</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>