unpackaged/main/default/objects/Account_Plant__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <formula>Plant__r.Plant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant Name</label>
    <type>Text</type>
</CustomField>