unpackaged/main/default/objects/Account_Plant__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>project_cloud__Project__c</referenceTo>
    <relationshipLabel>Account Plants</relationshipLabel>
    <relationshipName>Account_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>