unpackaged/main/default/objects/Account_Plant__c/fields/Project_Lifecycle_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Lifecycle_Status__c</fullName>
    <label>Project Lifecycle Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Documentation Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>