unpackaged/main/default/objects/Account_Plant__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Record Name</label>
    <type>AutoNumber</type>
</CustomField>