unpackaged/main/default/objects/Account_Plant__c/fields/Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Type__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>Legal Entity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>