unpackaged/main/default/objects/Account_Plant__c/fields/Renewable_Type__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Type__c</fullName>
    <formula>TEXT(Plant__r.Renewable_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewable Type</label>
    <type>Text</type>
</CustomField>