unpackaged/main/default/objects/Account_Plant__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <formula>TEXT( Plant__r.State__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>State/Province</label>
    <type>Text</type>
</CustomField>