unpackaged/main/default/objects/Account_Plant__c/fields/TEM_Version__c.field-meta.xml
<CustomField>
    <fullName>TEM_Version__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TEM Version</label>
    <referenceTo>TEM_Version__c</referenceTo>
    <relationshipLabel>Account Plants</relationshipLabel>
    <relationshipName>Account_Plants</relationshipName>
    <type>Lookup</type>
</CustomField>