unpackaged/main/default/objects/Account_Plant__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <formula>TEXT( Plant__r.Timezone__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timezone</label>
    <type>Text</type>
</CustomField>