unpackaged/main/default/objects/Account_Plant__c/fields/X3MW_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>X3MW_Legacy_ID__c</fullName>
    <label>3MW Legacy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>