unpackaged/main/default/objects/Account_Plant__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <formula>Plant__r.Zip_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zip/Postal Code</label>
    <type>Text</type>
</CustomField>