unpackaged/main/default/objects/Account_Plant__c/validationRules/Relationship_Type_equals_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Relationship_Type_equals_Owner</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL(Relationship_Type__c, &#39;Owner&#39;),
ISBLANK(TEXT( Ownership_Percentage__c )))</errorConditionFormula>
    <errorDisplayField>Ownership_Percentage__c</errorDisplayField>
    <errorMessage>Please add value in Ownership Percentage if you are the Owner</errorMessage>
</ValidationRule>