unpackaged/main/default/objects/Account_Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Asset_Class__c</columns>
    <columns>DC_Capacity_kW__c</columns>
    <columns>Plant_MWH__c</columns>
    <columns>Plant_MWP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>